fixed landing page spacing

--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,13 @@ h1, h3, h2 {
     border-bottom: solid;
     text-align: ce;
 }
-.nav li {
+.nav nav{
     list-style: none;
     padding: 15px;
-    display: inline;
+    display: flex;
+    flex-direction: row;
 }
-.nav li:hover {
+.nav nav:hover {
     background-color: rgb(0, 0, 0, 0.15);
     color: aliceblue;
 }
